--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Clock</title>
 </head>
 <body>
-
+    <p id="date"></p>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="clock.js"></script>
 </body>
 </html>
