--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Clock</title>
 </head>
 <body>
+
+    <!-- Display date -->
     <p id="date"></p>
+
+    <!-- Links to jquery, moment.js, and clock.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="clock.js"></script>
