Created folders, linked to new CSS file, and tested CSS grid with lorem ipsum

--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
     <!-- Display date -->
     <p id="date"></p>
 
+    <!-- Testing CSS grid -->
+    <div class="grid-container">
+        <div class="block1">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, minima dolorum. Repellendus totam amet maxime labore in impedit eum iusto voluptates ratione beatae. Expedita, tempore impedit iusto inventore mollitia modi.</p>
+        </div>
+        <div class="block2">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem amet sint hic aspernatur, in nesciunt itaque, repellendus iure, sit laborum nemo eum. Harum, hic sed. Odio quos quam voluptatem illum.</p>
+        </div>
+    </div>
+
     <!-- Links to jquery, moment.js, and clock.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="clock.js"></script>
+    <script src="assets/js/clock.js"></script>
 </body>
 </html>
